@@ -10,7 +10,11 @@
 #include <_mingw_unicode.h>
 
 #ifndef WINADVAPI
+#ifndef _ADVAPI32_
 #define WINADVAPI DECLSPEC_IMPORT
+#else
+#define WINADVAPI
+#endif
 #endif
 
 #ifdef __cplusplus
